--- a/api/package.json
+++ b/api/package.json
@@ -23,8 +23,10 @@
     "gtts": "^0.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
+    "node-fetch": "^2.7.0",
     "node-gtts": "^2.0.2",
     "nodemon": "^3.1.0",
-    "openai": "^4.27.0"
+    "openai": "^4.27.0",
+    "playht": "^0.9.8"
   }
 }
